name: reflex-elm
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: guaraqe@openmailbox.org
synopsis: Synopsis
author: guaraqe
extra-source-files:
    ChangeLog.md

library
  exposed-modules:
    Reflex.Elm
  build-depends:
      base >=4.9 && <4.10
    , contravariant
    , lens
    , product-profunctors
    , profunctors
    , reflex
    , reflex-dom
  ghc-options:
    -O2
  default-language: Haskell2010
  hs-source-dirs: src
